# terminalsync

./: .gitignore  README.md  install.sh
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/src/terminalsync/: cli.py  crypto.py  pairing.py  protocol.py  pty_proxy.py  server.py  session.py  status.py  tls.py  tty_guard.py
cli/src/terminalsync/web_client/: index.html
cli/tests/: test_crypto.py  test_integration.py  test_pairing.py  test_protocol.py  test_pty_proxy.py  test_status.py  test_tls.py  test_tty_guard.py
docs/: architecture.md
