[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalsync"
version = "0.1.1"
description = "Mirror a terminal to your phone — E2E encrypted, peer-to-peer, no daemon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lucas", email = "webmaster@clippingcacd.com.br" }]
keywords = ["terminal", "mirror", "phone", "encryption", "websocket", "pty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "aiohttp>=3.9",
    "PyNaCl>=1.5.0",
    "cryptography>=42.0",
    "cbor2>=5.6",
    "click>=8.1",
    "qrcode>=7.4",
]

[project.urls]
Homepage = "https://github.com/lucarp/terminalsync"
Repository = "https://github.com/lucarp/terminalsync"
Issues = "https://github.com/lucarp/terminalsync/issues"

[project.scripts]
terminalsync = "terminalsync.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
terminalsync = ["web_client/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
